# GeometricOS-Perception

./: .gitignore  CMakeLists.txt  FindOpenNI2.cmake  Findefusion.cmake  README.md  yolo_wrapper.py
src/: CMakeLists.txt  EFusionWrapper.cpp  EFusionWrapper.h  GroundTruthOdometry.h  LiveLogReader.h  MainController.h  RawLogReader.h  pcore.cpp
src/utils/: datareader.cpp  datareader.h
src/utils/GUI/: CMakeLists_remove.txt  MainController.h
